--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -61,7 +61,7 @@ controller:
   image:
     csiAttacher:
       name: registry.k8s.io/sig-storage/csi-attacher
-      tag: v4.1.0
+      tag: v4.1.0 # renovate: datasource=github-releases depName=kubernetes-csi/external-attacher
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -78,7 +78,7 @@ controller:
 
     csiResizer:
       name: registry.k8s.io/sig-storage/csi-resizer
-      tag: v1.7.0
+      tag: v1.7.0 # renovate: datasource=github-releases depName=kubernetes-csi/external-resizer
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -95,7 +95,7 @@ controller:
 
     csiProvisioner:
       name: registry.k8s.io/sig-storage/csi-provisioner
-      tag: v3.4.0
+      tag: v3.4.0 # renovate: datasource=github-releases depName=kubernetes-csi/external-provisioner
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -112,7 +112,7 @@ controller:
 
     livenessProbe:
       name: registry.k8s.io/sig-storage/livenessprobe
-      tag: v2.9.0
+      tag: v2.9.0 # renovate: datasource=github-releases depName=kubernetes-csi/livenessprobe
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -397,7 +397,7 @@ node:
   image:
     csiNodeDriverRegistrar:
       name: registry.k8s.io/sig-storage/csi-node-driver-registrar
-      tag: v2.7.0
+      tag: v2.7.0 # renovate: datasource=github-releases depName=kubernetes-csi/node-driver-registrar
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -414,7 +414,7 @@ node:
 
     livenessProbe:
       name: registry.k8s.io/sig-storage/livenessprobe
-      tag: v2.9.0
+      tag: v2.9.0 # renovate: datasource=github-releases depName=kubernetes-csi/livenessprobe
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -552,10 +552,10 @@ node:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
           - matchExpressions:
-            - key: "instance.hetzner.cloud/is-root-server"
-              operator: NotIn
-              values:
-                - "true"
+              - key: "instance.hetzner.cloud/is-root-server"
+                operator: NotIn
+                values:
+                  - "true"
 
   ## @param node.nodeSelector Node labels for node pods assignment
   ## ref: https://kubernetes.io/docs/user-guide/node-selection/
