--- a/test/e2e/kubernetes/testdriver.yaml
+++ b/test/e2e/kubernetes/testdriver.yaml
@@ -34,6 +34,7 @@ DriverInfo:
     FSResizeFromSourceNotSupported: false
     readWriteOncePod: false # https://github.com/hetznercloud/csi-driver/issues/327
     multiplePVsSameID: true # No need to disable according to comment on CapMultiplePVsSameID
+    capReadOnlyMany: false
   SupportedFsType:
     ext4:
     xfs:
