chore: fix renovate for container tags in generated files
- Autogenerated references are not updated by renovate
- Only open pull requests if container images are actually present

--- a/renovate.json
+++ b/renovate.json
@@ -12,5 +12,11 @@
         "github.com/kubernetes-csi/csi-test"
       ]
     }
-  ]
+  ],
+  "kubernetes": {
+    "fileMatch": [
+      "deploy/kubernetes/hcloud-csi.yml",
+      "chart/.snapshots/.+\\.yaml$"
+    ]
+  }
 }
