--- a/.github/workflows/publish_on_master.yml
+++ b/.github/workflows/publish_on_master.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main
+
+env:
+  GOTOOLCHAIN: local
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -14,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod
+          go-version: "1.23"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
