--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ on:
     branches: [main]
   pull_request:
 
+env:
+  GOTOOLCHAIN: local
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -13,7 +16,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod
+          go-version: "1.23"
 
       - name: Run tests
         run: go test -v -tags integration -race -coverprofile=coverage.txt ./...
@@ -50,7 +53,6 @@ jobs:
           - k3s: v1.31
             k8s-test: v1.30.1
 
-
     env:
       K3S_CHANNEL: ${{ matrix.k3s }}
       K8S_TEST_VERSION: ${{ matrix.k8s-test }}
@@ -61,7 +63,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod
+          go-version: "1.23"
 
       - uses: opentofu/setup-opentofu@v1
         with:
