--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           go-version: "1.23"
 
+      - uses: docker/setup-buildx-action@v3
+
       - name: Run tests
         run: go test -v -tags integration -race -coverprofile=coverage.txt ./...
 
@@ -28,6 +30,12 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      # Check if xfs config file exists in docker image
+      - name: Check XFS Config File
+        run: |
+          docker build -t xfs-test:latest -f dev/Dockerfile .
+          docker run --rm -i xfs-test:latest test -f /usr/share/xfsprogs/mkfs/lts_4.19.conf
 
   kubernetes:
     name: kubernetes ${{ matrix.k3s }}
