feat: Added provided-by label
provided-by is a new label, which will be automatically applied by hccm in a future release. It provides more detail about the origin of a server and allows for easier custom extension (e.g. robot + cloud + raspberry pi).

--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -245,6 +245,10 @@ spec:
                 operator: NotIn
                 values:
                 - "true"
+              - key: instance.hetzner.cloud/provided-by
+                operator: In
+                values:
+                - cloud
       nodeSelector:
         foo: bar
       tolerations:
