--- a/chart/templates/core/storageclass.yaml
+++ b/chart/templates/core/storageclass.yaml
@@ -16,6 +16,10 @@ allowedTopologies:
   - key: instance.hetzner.cloud/is-root-server
     values:
     - "false"
+- matchLabelExpressions:
+  - key: instance.hetzner.cloud/provided-by
+    values:
+    - "cloud"
 {{- end }}
 ---
 {{- end }}
