--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -246,9 +246,9 @@ spec:
                 values:
                 - "true"
               - key: instance.hetzner.cloud/provided-by
-                operator: In
+                operator: NotIn
                 values:
-                - cloud
+                - robot
       nodeSelector:
         foo: bar
       tolerations:
