--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -175,9 +175,9 @@ spec:
                 values:
                 - "true"
               - key: instance.hetzner.cloud/provided-by
-                operator: In
+                operator: NotIn
                 values:
-                - cloud
+                - robot
       tolerations:
         - effect: NoExecute
           operator: Exists
