--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,6 @@ jobs:
         with:
           go-version: "1.23"
 
-      - uses: docker/setup-buildx-action@v3
-
       - name: Run tests
         run: go test -v -tags integration -race -coverprofile=coverage.txt ./...
 
@@ -30,12 +28,6 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-      # Check if xfs config file exists in docker image
-      - name: Check XFS Config File
-        run: |
-          docker build -t xfs-test:latest -f dev/Dockerfile .
-          docker run --rm -i xfs-test:latest test -f /usr/share/xfsprogs/mkfs/lts_4.19.conf
 
   kubernetes:
     name: kubernetes ${{ matrix.k3s }}
@@ -105,6 +97,11 @@ jobs:
         run: |
           source dev/files/env.sh
           skaffold run
+
+      - name: Check XFS config file existence
+        run: |
+          DOCKER_IMAGE_ID=$(docker images --format "{{.ID}} {{.CreatedAt}}" localhost:30666/docker_io_hetznercloud_hcloud-csi-driver | sort -k2 -r | head -n1 | awk '{print $1}')
+          docker run --rm -i $DOCKER_IMAGE_ID test -f /usr/share/xfsprogs/mkfs/lts_4.19.conf
 
       - name: Run parallel tests
         run: |
