feat: support for SELinux mount

--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -649,6 +649,7 @@ spec:
   attachRequired: true
   fsGroupPolicy: File
   podInfoOnMount: true
+  seLinuxMount: true
   volumeLifecycleModes:
   - Persistent
 ---
