--- a/chart/templates/core/csidriver.yaml
+++ b/chart/templates/core/csidriver.yaml
@@ -6,5 +6,6 @@ spec:
   attachRequired: true
   fsGroupPolicy: File
   podInfoOnMount: true
+  seLinuxMount: true
   volumeLifecycleModes:
   - Persistent
