--- a/chart/templates/core/storageclass.yaml
+++ b/chart/templates/core/storageclass.yaml
@@ -10,7 +10,7 @@ provisioner: csi.hetzner.cloud
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
 reclaimPolicy: {{ $val.reclaimPolicy | quote }}
-{{- if $val.includesRobotServers }}
+{{- if $val.allowedTopologyCloudServer }}
 allowedTopologies:
 - matchLabelExpressions:
   - key: instance.hetzner.cloud/is-root-server
