--- a/.github/workflows/publish_on_tag.yml
+++ b/.github/workflows/publish_on_tag.yml
@@ -4,9 +4,6 @@ on:
     tags:
       - "v*.*.*"
 
-env:
-  GOTOOLCHAIN: local
-
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -15,10 +12,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v6
-        with:
-          go-version: "1.24"
+      - uses: actions/setup-go@v6
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
