--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,6 +30,8 @@ jobs:
       - uses: actions/checkout@v5
 
       - uses: actions/setup-go@v6
+        with:
+          go-version-file: go.mod
 
       - uses: golangci/golangci-lint-action@v6
         with:
